--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="enter_comment">Please enter comment!</string>
     <string name="enter_rating">Give some rating!</string>
     <string name="offer_add_to_cart">Offer saved to Basket</string>
+    <string name="cart_is_empty">Cart is empty</string>
 </resources>
